# ord20-indexer

./: .env  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
deploy/: ord20.service
migrations/0001_create_balances/: down.sql  up.sql
migrations/0002_create_tracker/: down.sql  up.sql
migrations/0003_create_history/: down.sql  up.sql
migrations/0004_create_inscriptions/: down.sql  up.sql
migrations/0005_create_status/: down.sql  up.sql
src/: database.rs  indexer.rs  main.rs  models.rs  ordinals.rs  schema.rs  util.rs
