[package]
name = "ord20-indexer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { version = "0.4.2", features = ["serde"] }
diesel = { version = "2.1.3", features = ["postgres","numeric"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = { version = "1.0.192", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json"] }
futures = "0.3.29"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4.20"
ctrlc = { version = "3.4.1", features = ["termination"] }
serde_json = "1.0.108"
hex = "0.4.3"
chrono = "0.4.31"
env_logger = "0.10.1"